--- a/rLessons/DataViz.Rmd
+++ b/rLessons/DataViz.Rmd
@@ -26,10 +26,9 @@ x<-c(c(1:40) + rnorm(40,sd=10),
      c(41:60) + rnorm(20,sd=10),
      c(61:100) + rnorm (40, sd=10))
 xf<-c(rep("low",50),rep("high",50))
-y<-x + rnorm(100, sd=2)
-z<-x + rnorm(100, sd=10)
+y<-x + rnorm(100, sd=2) + 10
+z<-x + rnorm(100, sd=10) + 100
 df<-data.frame(xf,x,y,z)
-
 ```
 
 Now, let's do a simple scatter plot
@@ -79,7 +78,7 @@ barplot(sapply(df[,-1],mean)+c(0,10,50))
 
 So, now that we've seen some basic plots with `base`, it is obvious that the stock look of these plots is adequate, but they are very simple plots and may not be as flashy or publication ready as you'd like.  In part, `ggplot2` was created to ease the creation of more complex figures.
 
-A lot has been written about `ggplot2`.  In particular see [here](http://ggplot2.org/), [here](http://docs.ggplot2.org/current/) and [here](https://github.com/karthikram/ggplot-lecture).  The gist of all this, is that `ggplot2` is an implementation of something known as the "grammar of graphics."  This separates the basic components of a graphic into distinct parts (e.g. like the parts of speach in a sentence).  You add these parts together and get a figure.
+A lot has been written and discussed about `ggplot2`.  In particular see [here](http://ggplot2.org/), [here](http://docs.ggplot2.org/current/) and [here](https://github.com/karthikram/ggplot-lecture).  The gist of all this, is that `ggplot2` is an implementation of something known as the "grammar of graphics."  This separates the basic components of a graphic into distinct parts (e.g. like the parts of speach in a sentence).  You add these parts together and get a figure.
 
 Before we start developing some graphics, we need to do a bit of package maintenance as `ggplot2` is not installed by default.
 
@@ -96,8 +95,9 @@ First we create our ggplot object.  Everything we do will build off of this
 **Note: Programmers rely on API documentation. The `ggplot2` equivalent of that is the [documentation](http://docs.ggplot2.org/current/).  I will try to remember to search through that, as if I were building a plot from scratch.  I work this way (editor in one monitor, API documentaion in another)**
 
 ```{r eval=FALSE}
-# aes() are the "aesthetics" info.  I find this confusing.
-# as you are mostly just passing the variables to plot
+# aes() are the "aesthetics" info.  When you simply add the x and y
+# that can seem a bit of a confusing term.  You also use aes() to 
+# change color, shape, size etc.  
 ggDf<-ggplot(df,aes(x=x,y=z))
 ```
 
@@ -127,7 +127,7 @@ ggDf +
   geom_point(aes(color=xf, shape=xf),size=5)
 ```
 
-Much easier that using base.  Now `ggplot2` really shines when you want to add stats (regression lines, intervals, etc.).
+Much easier that using base.  Now `ggplot2` really shines when you want to add stats (regression lines, intervals, etc.). 
 
 Lets add a loess line with 95% confidence intervals
 
@@ -159,17 +159,34 @@ ggplot(df,aes(x=x))+
 Barplots (FIX ME)
 
 ```{r eval=FALSE}
-# I am not up-to-speed on reshape2.  So for the time-being, melt is magic
-mdf<-melt(df)
-ggplot(mdf,aes(x=factor(variable),y=mean(value+c(0,10,100))))+
-  geom_bar()
+# I am not up-to-speed on reshape2 or plyr.  So for the time-being, melt is magic
+library(reshape2)
+library(plyr)
+mdf<-ddply(melt(df),.(variable),summarise,
+           meanVal = mean(value),
+           low = mean(value) - sd(value)/sqrt(length(value)),
+           high = mean(value) + sd(value)/sqrt(length(value)))
+myBarChart<-ggplot(mdf,aes(x=factor(variable),y=meanVal,fill=variable))+
+  geom_bar(stat="identity")+
+  geom_errorbar(aes(ymin=low,ymax=high,width=0.3))+
+  labs(title="Bar Plot with SE error bars", x="Treatment",
+       y="Mean Response")
+
+myBarChart
 ```
 
-Those are kind of small and we should color them based on our high/low labelling
+So, not spectacular yet, but with a bit more dithering, the plot would be publication ready, provided you could save it as an image file.  Well, you can do that too!
 
+```{r eval=FALSE}
+ggsave(plot=myBarChart,
+       file="myBarChart.jpg")
+```
+
+## Data Viz Exercise
+Write a documented function that creates a data visualization of the NLA data frame we have been working with.  Use your imagination!  When youa are done and have an image on your screen, raise your hands.  We will pick some favorites and show the rest of the class.
 
 # R Data Viz Examples
 
-- Base examples
-- ggplot examples
-- Accidental aRt (R Data Viz, gone wrong)
+- Base examples: [R Gallery]()
+- ggplot examples: [Google Image Search](http://goo.gl/P0q2Lx)
+- R Data Viz, gone wrong:[Accidental aRt](http://accidental-art.tumblr.com) 
